[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite/pngwing.com(2).png" type="Texture" id=1]
[ext_resource path="res://script/RigidBody2D.gd" type="Script" id=2]
[ext_resource path="res://scene/BulletEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.5, 105 )

[node name="RigidBody2D" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, -1 )
scale = Vector2( 0.486328, 0.486328 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 18 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -88 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="BulletEnemy" parent="." instance=ExtResource( 3 )]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
